@@ -13,8 +13,18 @@
   15 0004 0[04] ?00 ?00 ?0[04][ 	]+.long[ 	]+4
   16[ 	]+.endc
   17[ 	]+.endc
-  18 0008 00 ?00 ?00 ?00[ 	]+.p2align 5,0
-  18[ 	]+00 ?00 ?00 ?00 
-  18[ 	]+00 ?00 ?00 ?00 
-  18[ 	]+00 ?00 ?00 ?00 
-  18[ 	]+00 ?00 ?00 ?00 
+  18[ 	]+
+  19[ 	]+.if	0
+  21[ 	]+.elseif	1
+  22[ 	]+.if	0
+  24[ 	]+.elseif	1
+  25 0008 0[07] ?00 ?00 ?0[07][ 	]+.long[ 	]+7
+  26[ 	]+.endif
+  27[ 	]+.elseif	1
+  29[ 	]+.else
+  31[ 	]+.endif
+  32 000c 00 ?00 ?00 ?00[ 	]+.p2align 5,0
+  32[ 	]+00 ?00 ?00 ?00 
+  32[ 	]+00 ?00 ?00 ?00 
+  32[ 	]+00 ?00 ?00 ?00 
+  32[ 	]+00 ?00 ?00 ?00 
