@@ -1,3 +1,8 @@
+2001-03-31  Alan Modra  <alan@linuxcare.com.au>
+
+	* gas/all/cond.s: Add .if .elseif tree.
+	* gas/all/cond.d: Match above.
+
 2001-03-24  Alan Modra  <alan@linuxcare.com.au>
 
 	* gas/i386/ssemmx2.s: Change movntq to movntdq.
